# cslox

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Program.cs  README.md  cslox.sln
src/clox/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/cslox/: AstPrinter.cs  Environment.cs  Expr.cs  Interpreter.cs  LoxCallable.cs  LoxClass.cs  LoxFunction.cs  LoxInstance.cs  LoxProperty.cs  NativeFunctions.cs  Parser.cs  Program.cs  Resolver.cs  Return.cs  RuntimeError.cs  Scanner.cs  Stmt.cs  Token.cs  TokenType.cs
test/: precedence.lox
test/assignment/: undefined.lox
test/bool/: equality.lox  not.lox
test/call/: bool.lox  nil.lox  num.lox  object.lox  string.lox
test/class/: empty.lox  inherit_self.lox  local_inherit_other.lox  local_inherit_self.lox  local_reference_self.lox  reference_self.lox
test/comments/: block_comment_before_code.lox  block_comment_inline.lox  block_comment_multiline.lox  empty_block_comment.lox  only_block_comment.lox  unterminated_block_comment.lox
test/constructor/: default_arguments.lox
test/field/: call_nonfunction_field.lox  get_on_class.lox  set_evaluation_order.lox  set_on_class.lox  undefined.lox
test/for/: class_in_body.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox  var_in_body.lox
test/function/: local_mutual_recursion.lox  missing_comma_in_parameters.lox  mutual_recursion.lox  print.lox
test/if/: class_in_else.lox  class_in_then.lox  if.lox  truth.lox  var_in_else.lox  var_in_then.lox
test/lambda/: alongside_named.lox  assign_to_variable.lox  body_must_be_block.lox  empty_body.lox  expression_statement.lox  expression_statement_body.lox  (+8 more)
tool/: generate_ast.py  run_tests.py
(+64 files in other folders)
